--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./src/css/font-awebsome.min.css">
 <body>
     <header class="header">
-        <a href="/">
+        <a href="#">
             <h2 class="logo">Agência XYZ</h2>
         </a>
 
